Relase 0.1.7 (#11)
